# logixpr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: Doxyfile.in
include/: ast.h  equivalence_engine.h  logic_laws.h  parser.h  proof_search.h
src/: ast.cpp  equivalence_engine.cpp  main.cpp  parser.cpp  proof_search.cpp
tests/: test_logic_laws.cpp  test_proof_search.cpp
